--- a/styles/main.css
+++ b/styles/main.css
@@ -5,3 +5,93 @@
 #controlForm {
   margin: 0;
 }
+
+#world {
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  border: 1px solid var(--bs-dark);
+  margin-top: 20px;
+}
+
+.cell {
+  flex: 0 0 25%;
+  padding-bottom: 25%;
+  position: relative;
+  box-sizing: border-box;
+  border: 1px solid var(--bs-dark);
+}
+
+.action, .value {
+  position: absolute;
+  font-family: monospace;
+}
+
+.action .label {
+  font-size: 48px;
+}
+
+.action .score {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.action.up {
+  top: 5%;
+  left: 50%;
+  translate: -50% 0;
+}
+
+.action.down {
+  bottom: 5%;
+  left: 50%;
+  translate: -50% 0;
+}
+
+.action.left {
+  top: 50%;
+  left: 5%;
+  translate: 0 -50%;
+}
+
+.action.right {
+  top: 50%;
+  right: 5%;
+  translate: 0 -50%;
+}
+
+.wall {
+  background-color: var(--bs-gray);
+}
+
+.goal.positive {
+  background-color: var(--bs-blue);
+}
+
+.goal.negative {
+  background-color: var(--bs-red);
+}
+
+.wall .action,
+.goal .action {
+  display: none;
+}
+
+.cell .value {
+  display: none;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  font-size: 32px;
+}
+
+.goal .value {
+  display: block;
+  color: var(--bs-white);
+}
+
+.start .value {
+  display: block;
+  color: var(--bs-dark);
+}
